policies/allow-privilege-escalation-containers.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: check-allow-privilege-escalation-containers
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >
        (has(object.spec.os) &&
         has(object.spec.os.name) &&
         object.spec.os.name.lowerAscii() == "windows") ||
        object.spec.containers.all(c,
          has(c.securityContext) &&
          has(c.securityContext.allowPrivilegeEscalation) &&
          c.securityContext.allowPrivilegeEscalation == false
        )
      message: >
        spec.containers[*].securityContext.allowPrivilegeEscalation must be set to false.
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allow-privilege-escalation-containers-namespace-optout-warn
spec:
  policyName: check-allow-privilege-escalation-containers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["restricted"]
        - key: validating-admission-policies.kolteq.com/allow-privilege-escalation-containers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allow-privilege-escalation-containers-namespace-optin-warn
spec:
  policyName: check-allow-privilege-escalation-containers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: allow-privilege-escalation-containers.validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allow-privilege-escalation-containers-namespace-optout-audit
spec:
  policyName: check-allow-privilege-escalation-containers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["restricted"]
        - key: validating-admission-policies.kolteq.com/allow-privilege-escalation-containers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allow-privilege-escalation-containers-namespace-optin-audit
spec:
  policyName: check-allow-privilege-escalation-containers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: allow-privilege-escalation-containers.validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allow-privilege-escalation-containers-namespace-optout-deny
spec:
  policyName: check-allow-privilege-escalation-containers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["restricted"]
        - key: validating-admission-policies.kolteq.com/allow-privilege-escalation-containers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allow-privilege-escalation-containers-namespace-optin-deny
spec:
  policyName: check-allow-privilege-escalation-containers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: allow-privilege-escalation-containers.validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["true"]
